--- a/style.css
+++ b/style.css
@@ -52,8 +52,12 @@ header {
    
 }
 .citation {
-    padding-top: 200px;
-    padding-left: 500px;
+    display: flex;
+    margin: 0 auto;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 450px;
 }
 blockquote {
     text-align: center;
@@ -62,21 +66,18 @@ blockquote {
     border-bottom: 4px solid rgba(255, 255, 255, 0.507);
     padding: 60px;
     padding-top: 30px;
-    background-image: linear-gradient(to right, rgba(14, 14, 14, 0), rgba(0, 0, 0, 0.50));
-    position: fixed;
-    width: 150px;
-    height: 100px;
+    background-image: linear-gradient(to right, rgba(14, 14, 14, 0), rgba(0, 0, 0, 0.70));
     transition: transform .7s;
-    margin-left: 700px;
     border-top-left-radius: 1px;
     border-bottom-left-radius: 2px;
     border-top-right-radius: 2px;
-    
+    font-family: 'Karla', sans-serif;
+    font-size: 30px;
     
 }
 
 blockquote:hover {
-    transform: scale(1.3);
+    transform: scale(1.1);
 }
 
 }
@@ -131,7 +132,7 @@ a:-webkit-any-link {
     align-items: center;
     margin: 0 auto;
     width: 100%;
-    margin-top: 350px;
+    margin-top: 50px;
     }
 
     
